kubernetes/main/apps/web/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: web
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
          image: ghcr.io/cloudwithdan/world-wide-web:latest
          imagePullPolicy: Always
          ports:
            - name: web
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
          readinessProbe:
            httpGet:
              path: /
              port: 8080
          securityContext:
            runAsUser: 1000 # Non-root user
            runAsGroup: 3000 # Non-root group
            readOnlyRootFilesystem: true # Read-only filesystem
            allowPrivilegeEscalation: false # No privilege escalation
            privileged: false
            capabilities:
              drop:
                - ALL # Drop all capabilities
              add:
                - NET_BIND_SERVICE # Allow only required capabilities
