kubernetes/main/apps/web/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: web
  annotations:
    external-dns.alpha.kubernetes.io/target: "${SECRET_EXTERNAL_DOMAIN}"
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/compute-full-forwarded-for: "true"
spec:
  ingressClassName: external
  rules:
    - host: "${SECRET_EXTERNAL_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: web
